Fixed too much padding on large screens

--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -2,6 +2,10 @@
 	width: 100%;
 	padding: #adapt(48, 20)[@value] 0;
 
+	@media (min-width: 1320px) {
+		padding: 48px 0;
+	}
+
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
